--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@
     padding: 0;
 }
 
+.logo img {
+    height: 40px;
+    width: auto; /* Mantiene la proporción */
+}
+
 body {
     font-family: 'Montserrat', sans-serif; /* Fuente de ejemplo */
     line-height: 1.6;
