--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ ul {
 }
 
 .hero .highlight-underline {
-    border-bottom: 3px solid #4CAF50; /* Subrayado verde */
+    border-bottom: 3px solid #074D80;
     padding-bottom: 2px; /* Espacio para el subrayado */
 }
 
