--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     padding: 0;
 
 body {
-    font-family: 'Montserrat', sans-serif; /* Fuente de ejemplo */
+    font-family: 'Montserrat', sans-serif;
     line-height: 1.6;
     color: #333;
     background-color: #F8F8F8; /* Color de fondo claro aproximado */
@@ -125,7 +125,7 @@ ul {
 }
 
 .hero .highlight-underline {
-    border-bottom: 3px solid #074D80;
+    border-bottom: 3px solid #00A1F2;
     padding-bottom: 2px; /* Espacio para el subrayado */
 }
 
@@ -140,19 +140,19 @@ ul {
 }
 
 .primary-button {
-    background-color: #2A3F3F;
+    background-color: #074D80;
     color: #fff;
-    border: 1px solid #2A3F3F;
+    border: 1px solid #074D80;
 }
 .primary-button:hover {
-    background-color: #3a5a5a;
+    background-color: #074D80;
 }
 
 
 .secondary-button {
     background-color: #fff;
     color: #2A3F3F;
-    border: 1px solid #2A3F3F;
+    border: 1px solid #074D80;
 }
 .secondary-button:hover {
     background-color: #f0f0f0;
