--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,7 @@ ul {
 }
 
 .service-card {
-    background-color: ##074D80; /* Un tono ligeramente más claro que el fondo */
+    background-color: #074D80; /* Un tono ligeramente más claro que el fondo */
     padding: 30px;
     border-radius: 8px;
     text-align: left;
