--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif; 
     line-height: 1.6;
     color: #333;
     background-color: #F8F8F8; /* Color de fondo claro aproximado */
@@ -39,7 +40,6 @@ ul {
     align-items: center;
 }
 
-}
 .logo img {
     height: 40px;
     width: auto; /* Mantiene la proporción */
@@ -60,7 +60,7 @@ ul {
 }
 
 .main-nav ul li a:hover {
-    color: #074D80; /* Color de resaltado azul */
+    color: #074D80; /* Color de resaltado Azul */
 }
 
 .cta-button {
@@ -73,13 +73,13 @@ ul {
 }
 
 .header-cta {
-    background-color: #074D80; /* Color oscuro principal */
+    background-color: #1F3752; /* Color oscuro principal */
     color: #fff;
-    border: 1px solid #074D80;
+    border: 1px solid #1F3752;
 }
 
 .header-cta:hover {
-    background-color: #074D80;
+    background-color: #1F3752;
 }
 
 
@@ -119,13 +119,13 @@ ul {
 
 .hero h1 {
     font-size: 2.8rem;
-    color: #074D80;
+    color: #1F3752;
     margin-bottom: 20px;
     line-height: 1.2;
 }
 
 .hero .highlight-underline {
-    border-bottom: 3px solid #00A1F2;
+    border-bottom: 3px solid #00A1F2; /* Subrayado Verde*/
     padding-bottom: 2px; /* Espacio para el subrayado */
 }
 
@@ -140,19 +140,19 @@ ul {
 }
 
 .primary-button {
-    background-color: #074D80;
+    background-color: #1F3752;
     color: #fff;
-    border: 1px solid #074D80;
+    border: 1px solid #1F3752;
 }
 .primary-button:hover {
-    background-color: #074D80;
+    background-color: #1F3752;
 }
 
 
 .secondary-button {
     background-color: #fff;
-    color: #2A3F3F;
-    border: 1px solid #074D80;
+    color: #1F3752;
+    border: 1px solid #1F3752;
 }
 .secondary-button:hover {
     background-color: #f0f0f0;
